<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"

        android:layout_height="0dp"
        android:layout_width="0dp"

        android:background="@drawable/icon_header"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_text_view_welcome_screen"
            style="@style/title_text_style"

            android:layout_height="wrap_content"
            android:layout_width="0dp"

            android:layout_marginTop="88dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"

            android:text="@string/title_first_screen"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_info_welcome_screen"
            style="@style/default_text_style"

            android:layout_height="wrap_content"
            android:layout_width="0dp"

            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"

            android:text="@string/text_info_first_screen"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title_text_view_welcome_screen"
            app:layout_constraintTop_toBottomOf="@+id/title_text_view_welcome_screen" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"

        android:layout_height="0dp"
        android:layout_width="0dp"

        android:background="@drawable/white_field"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcomeTextView"
            style="@style/bold_black_text"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"

            android:text="@string/text_welcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/skipTextView"
            style="@style/skip_style_text"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            android:layout_marginTop="56dp"
            android:layout_marginEnd="32dp"

            android:text="@string/text_skip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"

            app:srcCompat="@drawable/icon_arrow_skip_blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/skipTextView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            style="@style/style_email_layout"

            android:layout_height="wrap_content"
            android:layout_width="0dp"

            android:layout_marginEnd="16dp"
            android:layout_marginTop="100dp"
            android:layout_marginStart="16dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            style="@style/style_password_layout"

            android:layout_height="wrap_content"
            android:layout_width="0dp"

            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutEmail"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            style="@style/style_button_log_in"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"

            android:text="@string/log_in"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutPassword"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgotPasswordTextView"
            style="@style/default_black_text_style"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            android:layout_marginTop="16dp"
            android:layout_marginBottom="40dp"

            android:text="@string/forgot_password"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintBottom_toTopOf="@+id/create_acc_button"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_acc_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/loginButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>